--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,21 @@
 .bg-light {
     background-color:#9E84B3!important;
 }
+.btn-primary.active.focus,
+.btn-primary.active:focus,
+.btn-primary.focus,
+.btn-primary:active.focus,
+.btn-primary:active:focus,
+.btn-primary:focus {
+    outline: 0;
+    outline-color: transparent;
+    outline-width: 0;
+    outline-style: none;
+    box-shadow: 0 0 0 0.2rem #E2BDFF!important;
+}
+
+input:focus {
+    box-shadow: 0 0 0 0.2rem #E2BDFF!important;
+    border-color: #874fB3!important;
+}
+
