--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,6 @@
 
 input:focus {
     box-shadow: 0 0 0 0.2rem #E2BDFF!important;
-    border-color: #874fB3!important;
+    border-color: #9E84B3!important;
 }
 
